src/scss/share.scss
////
/// @group o-share
/// @link http://registry.origami.ft.com/components/o-share
////

/// Generate base share styles
/// @param {String} $classname [o-share] - base class name
@mixin oShareBase($classname: o-share) {
	.#{$classname} {
		display: inline-block;

		ul {
			margin: 0;
			padding: 0;
		}
	}

	.#{$classname}__action {
		float: left;
		margin: 0 0 0 5px;
		height: $_o-share-icon-size;
		list-style-type: none;
		line-height: $_o-share-icon-size;
		cursor: pointer;

		i {
			float: left;
			border-radius: 2px;
			width: $_o-share-icon-size;
			height: $_o-share-icon-size;
			text-indent: $_o-share-icon-size;
			background-image: url(_oShareGetSpriteUrl());
			overflow: hidden;
		}

		a {
			text-decoration: none;

			&:focus i {
				box-shadow: 0 0 2px #000000;
			}
		}
	}
}

/// Action link styles
/// @param {String} $classname [o-share] - base class name
@mixin oShareActionLink($classname: o-share) {
	.#{$classname}__action--url {
		display: none;

		i {
			@include _oShareSprite(link);
		}

		input {
			display: block;
			margin: 0;
			border: 0;
			border-radius: 2px;
			padding: 5px 8px;
			width: 140px;
			font-size: 12px;
			line-height: 14px;
			box-shadow: 0 0 3px #333333;
		}
	}

	[data-o-share--js] .#{$classname}__action--url {
		display: block;
	}

	.#{$classname}__action--url[aria-selected=true] {
		position: relative;

		a {
			display: none;
		}
	}
}

/// Icon
///
/// @param {String} $name - Name of the icon
/// @param {String} $classname [o-share] - base class name
@mixin oShareActionIcon($name, $classname: o-share) {
	.#{$classname}__action--#{$name} i {
		@include _oShareSprite($name);
	}
}

